# vsea-gtm-analyzer-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
env/: gtm-analyzer.env.example
src/agents/: agent_factory.py
src/agents/gtm_agent/: agent.py  prompts.py
src/configs/: config.py  config.toml
src/logging/: custom_logger.py
src/middlewares/: auth.py
src/models/: __init__.py  models.py
src/routes/: __init__.py
src/routes/analyze_doc/: route.py
src/routes/analyze_url/: route.py
src/routes/health/: route.py
src/routes/upload/: route.py
src/schemas/: analyze.py  gtm.py  upload.py
src/services/: agent_runner.py
src/services/gcs/: client.py
src/services/ingestion/: pdf_loader.py  pptx_loader.py
tests/: conftest.py  test_agent_runner.py  test_gcs_client.py  test_health.py  test_pdf_loader.py  test_pptx_loader.py  test_routes_analyze.py  test_routes_upload.py  test_schemas.py
